Fixing problem with layout on smaller resolution

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,11 @@
-html {
-    box-sizing: border-box;
-    height: 100vh;
-  }
-
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
+    box-sizing: border-box;
+}
+
+html {
+    overflow-x: hidden;
 }
 
 body {
@@ -14,10 +13,10 @@ body {
     font-size: 16px;
     font-weight: 300;
     margin: 0;
-    height: 100vh;
     --dark-blue: hsl(240, 38%, 20%);
     --grayish-blue: hsl(240, 18%, 77%);
     display: flex;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     background: url('../img/pattern-curve.svg') no-repeat bottom -50px left -80px;
@@ -136,9 +135,7 @@ body {
 
 @media (max-width: 700px) {
     .slider {
-        width: 100%;
-        height: 100%;
-        margin: 0 30px 0 30px;
+        margin: 20px 30px 20px 30px;
     }
 
     .slide__wrapper {
@@ -190,9 +187,4 @@ body {
     body {
         height: 100%;
     }
-
-    .slide__wrapper {
-        margin: 20px 30px 20px 30px;
-        justify-content: start;
-}
 }
